Refactor: Add build and run scripts, update README
Co-authored-by: hashimjacobs <hashimjacobs@gmail.com>